# Blog_Comment

./: .gitignore  README.md  blog_comment_application.py  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py  configuration_variables.py  constants.py  database.py  models.py
config/: configuration_variables.py  database.py  env_config.py
database/: database_setup.py
docker-entrypoint-initdb.d/: 01-create-test-db.sh
flask_setup/: middleware.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
migrations/: V10__add_avatar_file_id_to_accounts.sql  V11__add_account_deletion_support.sql  V12__add_article_description_to_articles.sql  V13__add_ban_columns_to_accounts.sql  V14__add_comment_soft_delete_and_edit.sql  V15__add_edited_at_to_articles.sql  V16__cascade_comment_reply_fk.sql  V1__init_schema.sql  V2__add_admin_role.sql  V3__rename_role_colum_in_account.sql  V3__rename_role_column_in_account.sql  V4__add_password_in_accounts.sql  V5__rename_and_update_schema.sql  V6__make_account_email_mandatory_and_unique.sql  V7__rename_unique_constraints.sql  V8__create_uploaded_files_table.sql  V9__add_comment_content_length_limit.sql  V9__set_comment_content_length_and_min_check.sql
tests/: conftest.py  factories.py  test_app_init.py  test_domain_factories.py  test_models.py  test_prosemirror_to_html.py  test_template_helpers.py
tests_hexagonal/: conftest.py  db_utils.py  exceptions_tests.py  test_architecture.py  test_domain_factories.py
translations/: messages.pot
utils/: prosemirror_to_html.py  (+1 more)
(+292 files in other folders)
